Fixing slider Overflow

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -29,6 +29,9 @@
 .mainlogo {
   margin: 1rem 4rem 1rem 0px;
 }
+.mainlogo:hover {
+  cursor: pointer;
+}
 .topheaderlinks {
   display: flex;
   justify-content: center;
